k8s/backend-manifest.yaml
# My Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: devops-team
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: debjyoti08/crud-application
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "150m"
            limits:
              memory: "256Mi"
              cpu: "300m"
---
# My Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-team
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000       
      targetPort: 3000  
  type: ClusterIP
