k8s/frontend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: devops-team
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: debjyoti08/crud-application-frontend
        ports:
        - containerPort: 80
      resources:
        requests:
          memory: "128Mi"
          cpu: "150m"
        limits:
          memory: "256Mi"
          cpu: "300m"

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: devops-team
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
