k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: devops-team
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: user.debjyoti.co.in
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific 
        backend:
          service:
            name: backend-service
            port:
              number: 3000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
